feat: enhance booking functionality with new reserve endpoint and sorting for user bookings